{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 357,
  "lineage": "a2e4003c-d336-e590-8af9-af5ac7a1b036",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:546132122685:vpc/vpc-04f68841b3a928c7f",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02749e1639aaa0e80",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-090cb4c005ea2a043",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04f68841b3a928c7f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f90e9f55982978b1",
            "owner_id": "546132122685"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04f167a56786e4b09",
            "arn": "arn:aws:ec2:us-east-2:546132122685:instance/i-0b8d773de79e47f89",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm-for-backend-profile",
            "id": "i-0b8d773de79e47f89",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "revalida-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ddbe6629848cc4e5",
            "private_dns": "ip-172-31-24-147.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.24.147",
            "public_dns": "ec2-3-15-163-218.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.163.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bf1d476dea512ba0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "backend_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0079c65cb9ff3eb1f",
            "tags": {
              "Name": "backend-instance"
            },
            "tags_all": {
              "Name": "backend-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bb2e43927bc7e1f0"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.postgres",
            "aws_db_subnet_group.revalida",
            "aws_iam_instance_profile.ssm_profile",
            "aws_iam_role.ssm",
            "aws_key_pair.revalida",
            "aws_security_group.backend_sg",
            "aws_security_group.db_sg",
            "aws_ssm_parameter.database_url",
            "aws_ssm_parameter.jwt_private_key",
            "aws_ssm_parameter.jwt_public_key",
            "aws_ssm_parameter.next_public_url",
            "aws_ssm_parameter.node_env",
            "aws_ssm_parameter.port",
            "data.aws_iam_policy_document.ssm_assume",
            "data.aws_ssm_parameter.database_url",
            "data.aws_ssm_parameter.jwt_private_key",
            "data.aws_ssm_parameter.jwt_public_key",
            "data.aws_ssm_parameter.next_public_url",
            "data.aws_ssm_parameter.node_env",
            "data.aws_ssm_parameter.port",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:546132122685:security-group/sg-0bb2e43927bc7e1f0",
            "description": "Allow SSH \u0026 API traffic to EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb2e43927bc7e1f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Backend API",
                "from_port": 3333,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3333
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "backend_sg",
            "name_prefix": "",
            "owner_id": "546132122685",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "revalida-backend-sg"
            },
            "tags_all": {
              "Name": "revalida-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f68841b3a928c7f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:546132122685:security-group/sg-09bbbf58919c63720",
            "description": "Allow Postgres only from our backend EC2 SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09bbbf58919c63720",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Postgres from backend",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bb2e43927bc7e1f0"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "revalida-db-sg",
            "name_prefix": "",
            "owner_id": "546132122685",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "revalida-db-sg"
            },
            "tags_all": {
              "Name": "revalida-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f68841b3a928c7f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend_sg"
          ]
        }
      ]
    }
  ]
}